Fixed manifesto translation

--- a/src/locales/ru/manifesto.json
+++ b/src/locales/ru/manifesto.json
@@ -5,68 +5,68 @@
     },
     "hero": {
       "title": "Манифест Joystream",
-      "text": "В нашем Манифесте изложены как проблемы, которые, с нашей точки зрения, существуют в индустрии цифровых медиа, так и методы, которые мы предлагаем для их решения."
+      "text": "В нашем манифесте изложены как проблемы, которые, с нашей точки зрения, существуют в индустрии цифровых медиа, так и методы, которые мы предлагаем для их решения."
     },
     "problem": {
       "title": "Проблема",
       "text": {
-        "artAsTool": "Мы верим в то, что творчество, будь то литература, музыка, фильмы, игры или перформанс, являются важнейшим инструментом распространения коллективных знаний среди членов сообществ. Эти средства экспрессии определяют общие ценности и, в конечном итоге, участвуют в формировании общей культуры, системы ценностей, и даже политического вектора. Поэтому крайне важную роль играют источники и методы финансирования, а также пути распространения.",
-        "mediaAsPrimaryMedium": "На сегодняшний день, цифровые медиа стали основными носителем экспрессий, а медаиплатформы начали играть роль ключевых организаторов этой деятельности.",
-        "unaccountableInstitutions": "К сожалению, на сегодняшний день из-за эффектов связанных с функционированием сетей, экономических процессов, регуляций и политических интересов, мы остаемся один на один с несколькими крупными игроками, которые диктуют свои правила. Эти игроки практически полностью подчиняются законам классического рынка и политическим механизмам.",
-        "filteredOnTheirTerms": "В итоге, наши сториз, выражения эмоций - любая экспрессия в целом, фильтруется согласно их правилам. Это вытекает в целый калейдоскоп проблем, таких как",
-        "inflexible": "негибкая монетизация, цензура высказываний, несправедливое распределение прибыли между создателями контента и аудиторией, низкий уровень инновационности или снижение доверия со стороны сторонних разработчиков."
+        "artAsTool": "Мы верим в то, что творчество, будь то литература, музыка, фильмы, игры или перформанс, является важнейшим инструментом распространения коллективных знаний среди членов сообществ. Эти средства самовыражения определяют общие ценности и, в конечном итоге, участвуют в формировании общей культуры, системы ценностей и даже политического вектора. Поэтому крайне важную роль играют источники и методы их финансирования, а также пути распространения.",
+        "mediaAsPrimaryMedium": "На сегодняшний день цифровые медиа стали основным средством распространения самовыражения, а медаиплатформы начали играть роль ключевых организаторов этой деятельности.",
+        "unaccountableInstitutions": "К сожалению, на сегодняшний день из-за эффектов, связанных с функционированием сетей, экономией за счет масштаба, регуляциями и политическими интересами, остается лишь горстка крупных игроков, диктующих свои правила. Эти игроки практически не подчиняются законам рынка и политическим механизмам.",
+        "filteredOnTheirTerms": "В итоге наши истории, самовыражение и взаимодействие - все это управляется ими и фильтруется по их правилам. Это порождает целый калейдоскоп проблем, таких как",
+        "inflexible": "негибкая монетизация, цензура высказываний, несправедливое распределение прибыли между создателями контента и аудиторией, низкий уровень инновационности или недостаток доверия сторонним разработчикам."
       }
     },
     "goal": {
       "title": "Цель",
       "text": {
-        "arrangement": "Мы считаем, что медиаплатформы обязаны быть подотчетны людям на которых они оказывают влияние, будь то их конечные пользователи, создатели контента, сторонние разработчики или штатные сотрудники.",
+        "arrangement": "Мы считаем, что медиаплатформы обязаны быть подотчетны людям, на которых они оказывают влияние, будь то их конечные пользователи, создатели контента, сторонние разработчики или штатные сотрудники.",
         "accountability": "Отсутствие такой формы отчетности и является корнем проблемы."
       }
     },
     "thesis": {
       "title": "Главный тезис",
       "text": {
-        "coreThesis": "Наш главный тезис заключается в том, что для достижения цели необходимо решить две основные задачи, и путем к их правильному решению является использование современных распределенных систем и технологий, включая блокчейн, использование смарт контрактов и токенов."
+        "coreThesis": "Наш главный тезис заключается в том, что для достижения этой цели необходимо решить две основные задачи, и путем к их правильному решению является использование современной технологии распределенных систем, включая блокчейн, а также смарт-контрактов и токенов."
       }
     },
     "wedge": {
       "title": "Препятствия",
       "text": {
-        "alternative": "Самым главным вопросом является как создать альтернативную платформу с нуля, учитывая силу внешних факторов, которые сводят эффективность любой новой платформы к нулю, вне зависимости от набора возможностей этой платформы. Исторически сложилось, что процесс такого создания больше напоминает искусство, и успех редко можно повторить.",
-        "blockchainTokens": "Мы считаем, что токены, заработанные участниками на раннем этапе работы платформы, показывают свою чрезвычайную эффективность, мобилизуя и мотивируя динамичное сообщество участников из разных стран.",
-        "initialHurdle": "В прошлом это помогало зарождающимся сообществам, таким как Bitcoin, преодолеть начальное препятствие сетевого эффекта [1, 2, 3]. И хотя нет никаких гарантий, что этого будет достаточно, в долгосрочной перспективе наша стратегия выглядит для нас многообещающей."
+        "alternative": "Прежде всего, вопрос создания альтернативной платформы с нуля, учитывая силу внешних факторов, которые сводят эффективность любой новой платформы к нулю, вне зависимости от потенциальных возможностей этой платформы. Как показывает история, процесс создания - это почти искусство, и успех редко можно повторить.",
+        "blockchainTokens": "Мы считаем, что токены, заработанные участниками на раннем этапе работы платформы, - чрезвычайно эффективное средство мобилизации, интеграции и мотивации динамичного сообщества участников из разных стран.",
+        "initialHurdle": "В прошлом это помогало зарождающимся сообществам, таким как Bitcoin, преодолеть начальное препятствие сетевого эффекта [1, 2, 3]. И хотя нет никаких гарантий, что этого будет достаточно, в долгосрочной перспективе наша стратегия видится нам многообещающей."
       }
     },
     "accountability": {
       "title": "Масштабирование отчетности",
       "text": {
-        "createAndSustain": "Во-вторых: как организовать и поддерживать функционирование такой отчетность, когда масштабы платформы разрастутся.",
+        "createAndSustain": "Второй вопрос: как организовать и поддерживать отчетность, когда масштабы платформы увеличатся?",
         "twoWays": "Согласно А.О. Хиршману [4], существуют два основных метода, используя которые, участники могут привлекать организации любого типа к ответственности: голос и выход."
       }
     },
     "voice": {
       "title": "Голос",
       "text": {
-        "improveWithin": "Голос является попыткой улучшить или реформировать структуру организации изнутри. В этом случае эффективность метода зависит как от возможностей обмениваться достоверной информацией с другими участниками платформы, так и от возможности влиять на процессы управления. В современных медиаплатформах обе эти возможности недоступны.",
-        "infrastructure": "Мы считаем, что технология блокчейн может предоставить организационную и экономическую инфраструктуру, которая поможет в решении обеих проблем. Публичная и неизменяемая история об экономических операциях и административных действиях, которую каждый может проверить, - отправная точка к тому, чтобы любой пользователь мог понять текущее, а также прошлое состояние платформы. А это позволит каждому составлять суждения, базируясь на неоспоримых фактах и обстоятельствах.",
-        "control": "В дальнейшем токены блокчейна позволят объединить использование платформой и управление ею, позволяя каждому принимать участия в решениях на уровне платформы.",
-        "signWithCrypto": "Все что нужно для участия в таких мероприятиях - возможность подписывать сообщения цифровым криптографическим ключом. Такое безупречное с точки зрения безопасности взаимодействие предоставляет возможность неограниченному количеству пользователей динамически принимать участие в управлении платформой. Это может служить широкому кругу целей, таких как принятие решений об осуществлении проектов, внутреннему регулированию, участию в формальных ролях или даже в изменении структуры самой организации. Постановка такого взаимодействия на экономические рельсы кажется нам более соответствующей поставленным целям, нежели инфраструктура, построенная на принципах доверительного управления."
+        "improveWithin": "Голос является попыткой улучшить или реформировать структуру организации изнутри. В этом случае эффективность метода зависит как от возможностей обмениваться достоверной информацией с другими участниками платформы, так и от возможности влиять на процессы управления. На современных платформах обе эти возможности недоступны.",
+        "infrastructure": "Мы считаем, что технология блокчейн может предоставить организационную и экономическую инфраструктуру, которая поможет в решении обеих проблем. Публичная, проверяемая и неизменяемая история экономических операций и публичных действий, которую каждый может проверить, - отправная точка к тому, чтобы любой пользователь мог понять текущее, а также прошлое состояние платформы. А это позволит каждому составлять суждения, базируясь на неоспоримых фактах и обстоятельствах.",
+        "control": "В дальнейшем токены блокчейна позволят объединить использование платформой и управление ею, позволяя каждому принимать участие в решениях на уровне платформы.",
+        "signWithCrypto": "Все, что требуется для создания, реализации или передачи способности участвовать в такой деятельности, - возможность подписывать сообщения идентифицируемыми криптографическими ключами. Идеально надежное взаимодействие дает широкому, динамичному и неограниченному кругу пользователей средства управления платформой. Это может служить широкому кругу целей, таким как принятие решений об осуществлении проектов, внутреннее регулирование, участие в формальных ролях или даже в изменении структуры самой организации. Постановка такого взаимодействия на экономические рельсы кажется нам более соответствующей поставленным целям, нежели инфраструктура, построенная на принципах доверительного управления."
       }
     },
     "exit": {
       "title": "Выход",
       "text": {
-        "exit": "Выход представляет собой подход полного прекращения взаимодействия с организационной структурой в пользу присоединения к альтернативной, либо создания собственной альтернативы. Эффективность этого подхода зависит от сравнения затрат на прекращение взаимодействия и присоединения к аналогу, либо созданию собственной альтернативы, с желанием терпеть те условия, которые диктует текущая организация. На сегодняшний день стоимость выхода с платформ очень высока.",
-        "loweredCosts": "Создание платформ на основе открытого исходного кода, протоколов и публичных данных, как в случае с системами на основе технологии блокчейн, может кардинально снизить эту стоимость. Так как пользователи контролирует собственную информацию, учетную запись и активы, они могут с легкостью присоединиться к новой платформе, даже забрав с собой всех своих друзей.",
-        "competition": "Открытые протоколы и наличие открытых данных приведут к развитию возможностей одновременного участия в нескольких платформах одновременно, даже не переключаясь между ними, что будет способствовать конкуренции на уровне платформ [5].",
-        "reusability": "Даже более того, использование открытого исходного кода подразумевает, что все наработки платформы могут быть легко использованы повторно, а так как все организационная структура и ее состояние является публичным, можно клонировать целую экосистему и создать альтернативную платформу с альтернативными целями и политиками."
+        "exit": "Выход - полное прекращение взаимодействия с организационной структурой в пользу присоединения к альтернативной либо создание собственной альтернативы. Эффективность этого подхода зависит от сравнения затрат на прекращение взаимодействия и присоединения к альтернативе либо создание собственной альтернативы. На сегодняшний день стоимость ухода с платформ очень высока.",
+        "loweredCosts": "Создание платформ на основе открытого исходного кода, протоколов и публичных данных, как в случае с системами на основе технологии блокчейн, может кардинально снизить эту стоимость. Так как пользователи контролируют собственную информацию, учетную запись и активы, они могут с легкостью присоединиться к новой платформе, даже забрав с собой всех своих друзей.",
+        "competition": "Открытые протоколы и наличие открытых данных приведут к развитию возможностей одновременного участия в нескольких платформах, даже не переключаясь между ними, что будет способствовать конкуренции на уровне платформ [5].",
+        "reusability": "Даже более того, использование открытого исходного кода подразумевает, что все наработки платформы могут быть легко использованы повторно, а так как вся организационная структура и ее состояние являются публичными, можно клонировать целую экосистему и создать альтернативную платформу с альтернативными целями и политиками."
       }
     },
-    "ctaText": "В наших планах есть еще много места для участия, поэтому присоединяйтесь, отправив нам <0>email</0> или присоединяйтесь к  <1>Discord</1> или <2>Reddit</2>.",
+    "ctaText": "В этом плане есть место и для вашего участия, поэтому присоединяйтесь, отправив нам <0>email</0>, или присоединяйтесь к <1>Discord</1> или <2>Reddit</2>.",
     "references": {
       "title": "Ссылки",
-      "text": "<0>[1] Эрсам, Ф. Токены блокчейна и рассвет децентрализованной бизнес-модели. Medium. 1 августа, 2016.</0><0>[2] Сринивасан Б.С. Мысли о токенах. Medium. 27 мая, 2017.</0><0>[3] Диксон, К. Крипто-токены: прорыв в проектировании открытых сетей. Medium. 1 июня, 2017.</0><0>[4] Хиршман, Альберт О. Выход, голос и лояльность: реакция на упадок фирм, организаций и государств. №25. Издательство Гарвардского университета, 1970.</0><0>[5] Роше, Жан-Шарль и Жан Тироль. «Конкуренция платформ на двусторонних рынках». Журнал европейской экономической ассоциации 1.4 (2003): 990–1029.</0>"
+      "text": "<0>[1] Эрсам Ф. Токены блокчейна и рассвет децентрализованной бизнес-модели. Medium. 1 августа, 2016.</0><0>[2] Сринивасан Б.С. Мысли о токенах. Medium. 27 мая, 2017.</0><0>[3] Диксон К. Крипто-токены: прорыв в проектировании открытых сетей. Medium. 1 июня, 2017.</0><0>[4] Хиршман, Альберт О. Выход, голос и лояльность: реакция на упадок фирм, организаций и государств. №25. Издательство Гарвардского университета, 1970.</0><0>[5] Роше, Жан-Шарль и Жан Тироль. «Конкуренция платформ на двусторонних рынках». Журнал Европейской экономической ассоциации 1.4 (2003): 990–1029.</0>"
     }
   }
 }
