--- a/src/locales/ru/manifesto.json
+++ b/src/locales/ru/manifesto.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "manifesto": {
     "siteMetadata": {
       "description": "Прочтите манифест Joystream"
@@ -66,7 +66,7 @@
     "ctaText": "В этом плане есть место и для вашего участия, поэтому присоединяйтесь, отправив нам <0>email</0>, или присоединяйтесь к <1>Discord</1> или <2>Reddit</2>.",
     "references": {
       "title": "Ссылки",
-      "text": "<0>[1] Эрсам Ф. Токены блокчейна и рассвет децентрализованной бизнес-модели. Medium. 1 августа, 2016.</0><0>[2] Сринивасан Б.С. Мысли о токенах. Medium. 27 мая, 2017.</0><0>[3] Диксон К. Крипто-токены: прорыв в проектировании открытых сетей. Medium. 1 июня, 2017.</0><0>[4] Хиршман, Альберт О. Выход, голос и лояльность: реакция на упадок фирм, организаций и государств. №25. Издательство Гарвардского университета, 1970.</0><0>[5] Роше, Жан-Шарль и Жан Тироль. «Конкуренция платформ на двусторонних рынках». Журнал Европейской экономической ассоциации 1.4 (2003): 990–1029.</0>"
+      "text": "<0>[1] Эрсам Ф. Токены блокчейна и рассвет децентрализованной бизнес-модели. Medium. 1 августа, 2016.</0><0>[2] Сринивасан Б.С. Мысли о токенах. Medium. 27 мая, 2017.</0><0>[3] Диксон К. Крипто-токены: прорыв в проектировании открытых сетей. Medium. 1 июня, 2017.</0><0>[4] Хиршман Альберт О. Выход, голос и лояльность: реакция на упадок фирм, организаций и государств. №25. Издательство Гарвардского университета, 1970.</0><0>[5] Роше Жан-Шарль и Жан Тироль. «Конкуренция платформ на двусторонних рынках». Журнал Европейской экономической ассоциации 1.4 (2003): 990–1029.</0>"
     }
   }
 }
