--- a/src/locales/ru/privacy-policy.json
+++ b/src/locales/ru/privacy-policy.json
@@ -5,54 +5,54 @@
     },
     "hero": {
       "title": "Политика конфиденциальности и использования файлов cookie",
-      "text": "<0><0>Jsgenesis уважают вашу приватность.</0><1/><1/>Эта Политика Конфиденциальности (\"Политика Конфиденциальности\") и политика использования cookie (\"Политика Cookie\") объясняет как Jsgenesis AS (\"Jsgenesis\", \"Компания\", \"Мы\", \"Нас\", \"Наш\") собирает и использует данные и информацию когда вы (\"Пользователь\") используете любой из продуктов Joystream, разработанных в рамках GitHub организации <3>Joystream</3>. Эти продукты (вместе называемые \"Программное обеспечение\") включают, но не ограничиваются всеми страницами домена <6>joystream.org</6> (\"Вебсайт\"), <10>Joyful нода</10> (\"Полная нода\"), <14>Нода хранения Colossus</14> (\"Нода Хранения\"), пользовательский интерфейс Pioneer, либо <18>размещенное самостоятельно</18> либо <22>размещенное у Нас</22>  (\"Приложение\").</0>"
+      "text": "<0><0>Jsgenesis уважает Вашу приватность.</0><1/><1/>Эта Политика Конфиденциальности (\"Политика Конфиденциальности\") и Политика использования файлов cookie (\"Политика использования файлов cookie\") объясняют, как Jsgenesis (\"Jsgenesis\", \"Компания\", \"Мы\", \"Нас\", \"Наш\") собирает и использует данные и информацию, когда Вы (\"Пользователь\") используете любой из продуктов Joystream, разработанных организацией, именуемой <3>Joystream</3> в GitHub. Эти продукты (вместе называемые \"Программное обеспечение\") включают, но не ограничиваются всеми страницами домена <6>joystream.org</6> (\"Веб-сайт\"), <10>нодой Joyful</10> (\"Полная нода\"), <14>нодой хранения Colossus</14> (\"Нода Хранения\"), пользовательским интерфейсом Pioneer, либо <18>размещенным самостоятельно</18>, либо <22>размещенным у Нас</22> (\"Приложение\").</0>"
     },
     "terms": {
-      "title": "К Политике конфиденциальности и Политике использования файлов cookie относятся следующие условия:",
-      "blockchain": "Термин <0>\"Блокчейн\"</0> относится к блокчейнам, созданным Полным узлом.",
+      "title": "К Политике конфиденциальности и Политике использования файлов cookie относятся следующие термины:",
+      "blockchain": "Термин <0>\"Блокчейн\"</0> относится к блокчейну(ам), созданному Полной нодой.",
       "content": "Термин <0>\"Контент\"</0> относится к мультимедийным файлам, доступ к которым осуществляется через наше Программное обеспечение.",
-      "keys": "Термин <0>\"Ключи\"</0> относится к частной/общедоступной паре криптографических ключей, которую пользователи могут создавать для создания записей (и дешифрования данных) в цепочке блоков.",
-      "membership": "Термин <0>\"Членство\"</0> относится к привязке ваших ключей к общедоступному профилю, позволяя пользователям получать доступ к Контенту и взаимодействовать с цепочкой блоков.",
-      "memo": "Термин <0>\"Мемо\"</0> относится к текстовому полю с включенной опцией маркдауна, в которое пользователи могут вводить данные, привязанные к своим ключам."
+      "keys": "Термин <0>\"Ключи\"</0> относится к частной/общедоступной паре криптографических ключей, которую пользователи могут создавать для записи (и дешифрования данных) в Блокчейне.",
+      "membership": "Термин <0>\"Членство\"</0> относится к привязке Ваших Ключей к общедоступному профилю, позволяя пользователям получать доступ к Контенту и взаимодействовать с Блокчейном.",
+      "memo": "Термин <0>\"Мемо\"</0> относится к текстовому полю с включенной опцией маркдауна, в которое пользователи могут вводить данные, привязанные к своим Ключам."
     },
     "privacyPolicyItems": {
       "title": "Политика Конфиденциальности",
-      "subtitle": "Последнее обновление 17-го Апреля 2019",
+      "subtitle": "Последнее обновление 17 Апреля 2019",
       "agreement": {
         "title": "1. Согласие с Политикой",
-        "content": "Используя любое Наше Программное обеспечение, Пользователь принимает настоящую Политику конфиденциальности. Если вы действуете от имени другой компании или работодателя, вы должны иметь полномочия действовать от их имени. Политика конфиденциальности не распространяется ни на одну нашу рассылку, где Пользователи связаны <0>политикой конфиденциальности</0> из <1>Mailchimp</1><2/><2/>Политика конфиденциальности не применяется к любым другим сторонним службам, включая, помимо прочего, приложения, веб-сайты, инструменты или программное обеспечение, даже если они доступны по ссылкам или руководствам в нашем Программном обеспечении."
+        "content": "Используя любое Наше Программное обеспечение, Пользователь принимает настоящую Политику Конфиденциальности. Если Вы действуете от имени другой компании или работодателя, Вы должны иметь полномочия действовать от их имени. Политика Конфиденциальности не распространяется ни на одну нашу рассылку, где Пользователи связаны <0>политикой конфиденциальности</0> <1>Mailchimp</1><2/><2/>Политика Конфиденциальности не применяется к любым другим сторонним службам, включая, помимо прочего, приложения, веб-сайты, инструменты или программное обеспечение, даже если они доступны по ссылкам или руководствам в нашем Программном обеспечении."
       },
       "changes": {
         "title": "2. Изменения в Политике",
-        "content": "Настоящая Политика конфиденциальности может быть изменена по собственному усмотрению Компании. В случае внесения какие-либо существенных изменений, Пользователь будет уведомлен в используемом Сервисе. Обратите внимание, что включение новых продуктов в термин «Программное обеспечение», например новый продукт, с которым взаимодействует Пользователь, заменяющий Приложение или новый инструмент для загрузки Контента, не считается существенным, поскольку он не повлияет на Пользователей, если они не станут использовать новый продукт. Изменение названий программного обеспечения, терминологии, используемой в настоящей Политике конфиденциальности, и изменение адресов ссылок также являются примерами несущественных изменений."
+        "content": "Настоящая Политика Конфиденциальности может быть изменена по собственному усмотрению Компании. В случае внесения каких-либо существенных изменений Пользователь будет уведомлен в используемом Сервисе. Обратите внимание, что включение новых продуктов в термин \"Программное обеспечение\", например, новый продукт, с которым взаимодействует Пользователь, заменяющий Приложение или новый инструмент для загрузки Контента, не считается существенным, поскольку оно не повлияет на Пользователей, если они не станут использовать новый продукт. Изменение названий программного обеспечения, терминологии, используемой в настоящей Политике Конфиденциальности, и изменение адресов ссылок также являются примерами несущественных изменений."
       },
       "informationCollected": {
-        "title": "3. Сбор Информации",
-        "content": "Все данные, записываемые в блокчейн, неявно собираются не только Компанией, но и любым, у которого локально запущен Полный узел, и доступ к ним осуществляется через Приложение или сторонние инструменты. Это включает, но не ограничивается, хэшами контента, профилями членства, полями Memo и любыми другими способами, которыми пользователь может записывать данные в цепочке блоков. ‍<0/> <0/> При использовании внутренней страницы <1>faucet</1> Веб-сайта, Компания будет записывать IP-адрес при каждом новым запросе токенов. Эти данные будут удаляться каждые 14 дней."
+        "title": "3. Сбор информации",
+        "content": "Все данные, записываемые в Блокчейн, неявно собираются не только Компанией, но и любым, у кого локально запущена Полная нода, и доступ к ним осуществляется через Приложение или сторонние инструменты. Это включает, но не ограничивается, хэшами Контента, профилями Членов, полями Мемо и любыми другими способами, которыми Пользователь может записывать данные в Блокчейне. ‍<0/> <0/> При использовании страниц <1>faucet</1> Веб-сайта Компания будет записывать IP-адрес при каждом новым запросе токенов. Эти данные будут удаляться каждые 14 дней."
       },
       "googleAnalytics": {
         "title": "",
-        "content": "Компания использует <0>Google Analytics</0>, с анонимизацией IP-адресов для сбора статистики на веб-сайте и в версии Приложения, размещенной у Нас. Все настраиваемые параметры обмена данными отключены для повышения конфиденциальности пользователей. ‍<1/> <1/><2> Компания не будет продавать ваши данные в рекламных или других целях.</2>"
+        "content": "Компания использует <0>Google Analytics</0> с анонимизацией IP-адресов для сбора статистики на Веб-сайте и в версии Приложения, размещенной у Нас. Все настраиваемые параметры обмена данными отключены для улучшения защиты конфиденциальности Пользователей. ‍<1/> <1/><2> Компания не будет продавать ваши данные в рекламных или других целях.</2>"
       }
     },
     "cookiePolicyItems": {
-      "title": "Политика cookie",
-      "subtitle": "Последнее обновление 17-е апреля 2019",
+      "title": "Политика использования файлов cookie",
+      "subtitle": "Последнее обновление 17 апреля 2019",
       "whatAreCookies": {
         "title": "1. Что такое cookie?",
-        "content": "Файлы cookie - это небольшие фрагменты текста, отправляемые веб-сайтом, который вы посещаете вашему браузеру. Файлы cookie хранится в вашем браузере и позволяют Сервису или третьему лицу узнавать вас и упрощать ваши последующие визиты, делать Сервис более полезным для вас. <0 /> ‍ <0 /> Файлы cookie могут быть постоянными или сеансовыми."
+        "content": "Файлы cookie - это небольшие фрагменты текста, передаваемые в браузер с сайта, который Вы посещаете. Файлы cookie хранятся в Вашем браузере и позволяют Сервису или третьему лицу узнавать Вас и упрощать Ваши последующие визиты, делать Сервис более полезным для Вас. <0 /> ‍ <0 /> Файлы cookie могут быть постоянными или сеансовыми."
       },
       "howWeUseCookies": {
-        "title": "2. Как мы используем cookie",
-        "content": "Мы используем файлы cookie для следующих целей нашего Сервиса: <0 /><0 /><1><0> Предоставление аналитики </0><0> Настройки торговой площадки </0><0> Постоянное локальное хранилище ключей и членства.</0></1>"
+        "title": "2. Как мы используем файлы cookie",
+        "content": "Мы используем файлы cookie для следующих целей нашего Сервиса: <0 /><0 /><1><0> Предоставление аналитики </0><0> Настройки хранения </0><0> локальное хранение Ключей и Членства.</0></1>"
       },
       "thirdPartyCookies": {
-        "title": "3. cookie сторонних источников",
-        "content": "В дополнение к нашим собственным файлам cookie мы также используем файлы cookie сторонних сервисов, чтобы собирать статистику использования Сервиса, показывать рекламу в Сервисе и посредством Сервиса и т.д. К ним относятся: <0/><0/><1><0><0>Google Analytics</0></0><0><0>Mailchimp</0> (только при подписке на любую из наших рассылок) </0><0><0>Godaddy</0></0></1><0 /> Пожалуйста, см. пункт 3 Политики конфиденциальности для получения дополнительной информации об использовании этих сервисов."
+        "title": "3. Сторонние файлы cookie",
+        "content": "В дополнение к нашим собственным файлам cookie мы также используем сторонние файлы cookie, чтобы, чтобы собирать статистику использования Сервиса, показывать рекламу в Сервисе и посредством Сервиса и т.д. К ним относятся: <0/><0/><1><0><0>Google Analytics</0></0><0><0>Mailchimp</0> (только при подписке на любую из наших рассылок) </0><0><0>Godaddy</0></0></1><0 /> Пожалуйста, см. пункт 3 Политики Конфиденциальности для получения дополнительной информации об использовании этих сервисов."
       },
       "regardingYourCookies": {
-        "title": "О ваших cookies",
-        "content": "Если вы хотите удалить файлы cookie или дать настроить свой браузер на удаление или отказ от файлов cookie, посетите справочные страницы своего браузера.<0 />‍<0 /> Однако вам следует принять во внимание, что если вы удалите файлы cookie или откажетесь принимать их, вы не сможете использовать все функции, которые мы предоставляем, вы также не сможете сохранить свои предпочтения, а некоторые из наших страниц могут отображаться некорректно."
+        "title": "О Ваших файлах cookie",
+        "content": "Если Вы хотите удалить файлы cookie или дать настроить свой браузер на удаление или отказ от файлов cookie, посетите справочные страницы своего браузера.<0 />‍<0 /> Однако Вам следует принять во внимание, что если Вы удалите файлы cookie или откажетесь принимать их, Вы можете потерять доступ к некоторым функциям, которые мы предоставляем. Вы также можете лишиться возможности сохранять свои предпочтения, а некоторые из наших страниц могут отображаться некорректно."
       }
     }
   }
