--- a/src/locales/ru/privacy-policy.json
+++ b/src/locales/ru/privacy-policy.json
@@ -48,7 +48,7 @@
       },
       "thirdPartyCookies": {
         "title": "3. Сторонние файлы cookie",
-        "content": "В дополнение к нашим собственным файлам cookie мы также используем сторонние файлы cookie, чтобы, чтобы собирать статистику использования Сервиса, показывать рекламу в Сервисе и посредством Сервиса и т.д. К ним относятся: <0/><0/><1><0><0>Google Analytics</0></0><0><0>Mailchimp</0> (только при подписке на любую из наших рассылок) </0><0><0>Godaddy</0></0></1><0 /> Пожалуйста, см. пункт 3 Политики Конфиденциальности для получения дополнительной информации об использовании этих сервисов."
+        "content": "В дополнение к нашим собственным файлам cookie мы также используем сторонние файлы cookie, чтобы собирать статистику использования Сервиса, показывать рекламу в Сервисе и посредством Сервиса и т.д. К ним относятся: <0/><0/><1><0><0>Google Analytics</0></0><0><0>Mailchimp</0> (только при подписке на любую из наших рассылок) </0><0><0>Godaddy</0></0></1><0 /> Пожалуйста, см. пункт 3 Политики Конфиденциальности для получения дополнительной информации об использовании этих сервисов."
       },
       "regardingYourCookies": {
         "title": "О Ваших файлах cookie",
