Additional fixes to brand

--- a/src/locales/ru/brand.json
+++ b/src/locales/ru/brand.json
@@ -80,7 +80,7 @@
       },
       "primaryColors": {
         "title": "01. Основные цвета",
-        "blackAndBlue": "Наши основные цвета - черный и синий Joystream Blue, характерный цвет, который помогает акцентировать и привлекает внимание. Белый цвет используется для успокоения взгляда, обеспечения прозрачности и улучшения читаемости.",
+        "blackAndBlue": "Наши основные цвета - черный и синий Joystream Blue, характерный цвет, который помогает акцентировать и привлекать внимание. Белый цвет используется для успокоения взгляда, обеспечения прозрачности и улучшения читаемости.",
         "blueGrey": "Еще один дополнительный цвет, который можно комбинировать с тремя основными цветами, - это серый с синим оттенком, его назначение сравнимо с белым, но он также дает хороший контраст с существующими белыми элементами там, где это необходимо."
       },
       "supportiveColors": {
